--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_multi_package_architecture
+name: app
 description: A new Flutter project.
 
 publish_to: "none"
@@ -9,6 +9,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  get: ^4.1.4
+
   flutter:
     sdk: flutter
 
