--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  equatable: ^2.0.0
   http: ^0.13.2
   connectivity: ^3.0.3
   data_connection_checker: ^0.3.4
