--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -22,5 +22,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # Linting
+  effective_dart: ^1.3.0
+
 flutter:
   uses-material-design: true
