--- a/iupp-components/pubspec.yaml
+++ b/iupp-components/pubspec.yaml
@@ -15,6 +15,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # Linting
+  effective_dart: ^1.3.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
