--- a/iupp_checkout/pubspec.yaml
+++ b/iupp_checkout/pubspec.yaml
@@ -32,6 +32,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # Linting
+  effective_dart: ^1.3.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
