--- a/iupp_core/pubspec.yaml
+++ b/iupp_core/pubspec.yaml
@@ -2,7 +2,6 @@ name: iupp_core
 description: A new Flutter package project.
 version: 0.0.1
 author:
-homepage:
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -19,6 +18,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # Linting
+  effective_dart: ^1.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
