--- a/iupp_sample_module/pubspec.yaml
+++ b/iupp_sample_module/pubspec.yaml
@@ -2,8 +2,6 @@ name: module
 description: A new Flutter package project.
 publish_to: none
 version: 0.0.1
-author:
-homepage:
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -19,6 +17,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # Linting
+  effective_dart: ^1.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
