--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   get: ^4.1.4
   iupp_checkout:
     path: ../iupp_checkout
+  iupp_marketplace_buyer:
+    path: ../iupp_marketplace_buyer
 
   flutter:
     sdk: flutter
@@ -27,3 +29,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
+  fonts:
+    - family: IuppIcons
+      fonts:
+        - asset: assets/fonts/IuppIcons.ttf
+        - asset: assets/fonts/IuppIcons.woff
