--- a/iupp_marketplace_buyer/pubspec.yaml
+++ b/iupp_marketplace_buyer/pubspec.yaml
@@ -1,6 +1,6 @@
 name: iupp_marketplace_buyer
 description: A new flutter module project.
-
+publish_to: 'none'
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -18,11 +18,20 @@ description: A new flutter module project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  iupp_core:
+    path:
+      ../iupp_core
+  iupp_components:
+    path:
+      ../iupp-components
+
+  # Remove further
+  carousel_slider: ^4.0.0-nullsafety.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,8 +55,8 @@ flutter:
 
   # To add Flutter specific assets to your application, add an assets section,
   # like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
