--- a/iupp_core/pubspec.yaml
+++ b/iupp_core/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  multiple_result: ^1.0.3
   equatable: ^2.0.0
   http: ^0.13.2
   connectivity: ^3.0.3
@@ -16,6 +17,8 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  faker: ^1.3.0
+  mocktail: ^0.1.2
   flutter_test:
     sdk: flutter
 
