--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -9,9 +9,12 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  flutter_web_plugins:
+    sdk: flutter
   flutter:
       sdk: flutter
-  get: ^4.1.4
+  iupp_core:
+    path: ../iupp_core
   iupp_checkout:
     path: ../iupp_checkout
   iupp_marketplace_buyer:
