--- a/iupp_core/pubspec.yaml
+++ b/iupp_core/pubspec.yaml
@@ -10,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cross_connectivity: ^3.0.2
+  data_connection_checker_tv: ^0.3.5-nullsafety
+  connectivity: ^3.0.3
   dio: ^4.0.0
   equatable: ^2.0.0
   http: ^0.13.2
