--- a/iupp-components/storyboard/pubspec.yaml
+++ b/iupp-components/storyboard/pubspec.yaml
@@ -23,3 +23,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
+
+  fonts:
+    - family: IuppIcons
+      fonts:
+        - asset: assets/fonts/IuppIcons.ttf
+        - asset: assets/fonts/IuppIcons.woff
