--- a/iupp_core/pubspec.yaml
+++ b/iupp_core/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   equatable: ^2.0.0
   http: ^0.13.2
   multiple_result: ^1.0.3
+  mask_text_input_formatter: ^2.0.0-nullsafety.2
 
 dev_dependencies:
   flutter_test:
