adding the fonts of itau

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,3 +34,11 @@ flutter:
       fonts:
         - asset: assets/fonts/IuppIcons.ttf
         - asset: assets/fonts/IuppIcons.woff
+    - family: ItauDisplay
+      fonts:
+        - asset: assets/fonts/ItauDisplay_Bd.ttf
+        - asset: assets/fonts/ItauDisplay_Blk.ttf
+        - asset: assets/fonts/ItauDisplay_He.ttf
+        - asset: assets/fonts/ItauDisplay_Lt.ttf
+        - asset: assets/fonts/ItauDisplay_Rg.ttf
+        - asset: assets/fonts/ItauDisplay_XBd.ttf
