--- a/iupp_core/pubspec.yaml
+++ b/iupp_core/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   http: ^0.13.2
   multiple_result: ^1.0.3
   mask_text_input_formatter: ^2.0.0-nullsafety.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
