--- a/iupp_core/pubspec.yaml
+++ b/iupp_core/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   multiple_result: ^1.0.3
   mask_text_input_formatter: ^2.0.0-nullsafety.2
   intl: ^0.17.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
