--- a/iupp_core/pubspec.yaml
+++ b/iupp_core/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   mask_text_input_formatter: ^2.0.0-nullsafety.2
   intl: ^0.17.0
   shared_preferences: ^2.0.5
+  logger: ^1.0.0
 
 dev_dependencies:
   flutter_test:
