--- a/iupp-components/pubspec.yaml
+++ b/iupp-components/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   carousel_slider: ^4.0.0-nullsafety.0
 
 dev_dependencies:
+  faker: ^2.0.0
   flutter_test:
     sdk: flutter
   mocktail_image_network: ^0.1.0
