--- a/iupp_marketplace_buyer/pubspec.yaml
+++ b/iupp_marketplace_buyer/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
   faker: ^2.0.0-rc.2
   mocktail: ^0.1.2
 
