--- a/iupp_checkout/pubspec.yaml
+++ b/iupp_checkout/pubspec.yaml
@@ -28,16 +28,16 @@ flutter:
   fonts:
     - family: IuppIcons
       fonts:
-        - asset: assets/fonts/IuppIcons.ttf
-        - asset: assets/fonts/IuppIcons.woff
+        - asset: packages/iupp_components/fonts/IuppIcons.ttf
+        - asset: packages/iupp_components/fonts/IuppIcons.woff
     - family: ItauDisplay
       fonts:
-        - asset: assets/fonts/ItauDisplay_Bd.ttf
-        - asset: assets/fonts/ItauDisplay_Blk.ttf
-        - asset: assets/fonts/ItauDisplay_He.ttf
-        - asset: assets/fonts/ItauDisplay_Lt.ttf
-        - asset: assets/fonts/ItauDisplay_Rg.ttf
-        - asset: assets/fonts/ItauDisplay_XBd.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_Bd.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_Blk.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_He.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_Lt.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_Rg.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_XBd.ttf
 
   module:
     androidX: true
