--- a/iupp_onboarding/pubspec.yaml
+++ b/iupp_onboarding/pubspec.yaml
@@ -19,6 +19,20 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+  fonts:
+    - family: IuppIcons
+      fonts:
+        - asset: packages/iupp_components/fonts/IuppIcons.ttf
+        - asset: packages/iupp_components/fonts/IuppIcons.woff
+    - family: ItauDisplay
+      fonts:
+        - asset: packages/iupp_components/fonts/ItauDisplay_Bd.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_Blk.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_He.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_Lt.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_Rg.ttf
+        - asset: packages/iupp_components/fonts/ItauDisplay_XBd.ttf
+
   module:
     androidX: true
     androidPackage: com.example.iupp_onboarding
