creating a lot of models, entities of marketplace

--- a/iupp_marketplace_buyer/pubspec.yaml
+++ b/iupp_marketplace_buyer/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   iupp_components:
     path: ../iupp-components
 
-  cupertino_icons: ^1.0.2
+  flutter_bloc: ^7.0.0
 
 dev_dependencies:
   flutter_test:
