more improves to generalize showcase

--- a/iupp-components/pubspec.yaml
+++ b/iupp-components/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     path: ../iupp_core
 
   carousel_slider: ^4.0.0-nullsafety.0
+  fancy_shimmer_image: ^2.0.0+1
 
 dev_dependencies:
   faker: ^2.0.0
