--- a/iupp-components/storyboard/pubspec.yaml
+++ b/iupp-components/storyboard/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  faker: ^2.0.0-rc.2
+  mocktail: ^0.1.2
 
 flutter:
   uses-material-design: true
