--- a/iupp_marketplace_buyer/pubspec.yaml
+++ b/iupp_marketplace_buyer/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     path: ../iupp-components
 
   flutter_bloc: ^7.0.0
+  json_annotation: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +25,8 @@ dev_dependencies:
     sdk: flutter
   faker: ^2.0.0-rc.2
   mocktail: ^0.1.2
+  json_serializable: ^4.1.3
+  build_runner: ^2.0.4
 
 flutter:
   uses-material-design: true
